--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "devDependencies": {
     "material-ui": "^0.18.3",
     "node-sass-chokidar": "0.0.2",
-    "react-scripts": "1.0.7"
+    "react-scripts": "1.0.7",
+    "react-tap-event-plugin": "^2.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -18,6 +19,6 @@
     "eject": "react-scripts eject",
     "build-css": "node-sass-chokidar src/ -o src/",
     "watch-css": "npm run build-css && node-sass-chokidar src/ -o src/ --watch --recursive",
-    "go" : "npm start | npm watch-css"
+    "go": "npm start | npm watch-css"
   }
 }
