--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "semantic-ui-react": "^0.68.5"
   },
   "devDependencies": {
+    "gh-pages": "^1.0.0",
     "node-sass-chokidar": "0.0.2",
     "react-scripts": "1.0.7",
     "react-tap-event-plugin": "^2.0.1"
@@ -20,6 +21,9 @@
     "eject": "react-scripts eject",
     "build-css": "node-sass-chokidar src/ -o src/",
     "watch-css": "npm run build-css && node-sass-chokidar src/ -o src/ --watch --recursive",
-    "go": "npm start | npm watch-css"
-  }
+    "go": "npm start | npm watch-css",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
+  },
+  "homepage": "https://multivoltage.github.io/track-board"
 }
